--- a/Application/Home/View/Public/header.html
+++ b/Application/Home/View/Public/header.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>进销存beta0.1管理系统</title>
-    <link rel="stylesheet" type="text/css" href="/Public/statics/css/bootstrap.min.css">
+    <link rel="stylesheet" media="screen" type="text/css" href="/Public/statics/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/Public/statics/css/style.css">
     <link rel="stylesheet" type="text/css" href="/Public/statics/css/login.css">
     <link rel="stylesheet" type="text/css" href="/Public/statics/css/bootstrapValidator.min.css">
