--- a/Application/Home/View/Public/menu.html
+++ b/Application/Home/View/Public/menu.html
@@ -1,18 +1,15 @@
 <aside class="col-sm-3 col-md-2 col-lg-2 sidebar">
     <ul class="nav nav-sidebar">
-        <li class="active"><a href="/Home/Index/index">首页</a></li>
+        <li id="index" class="active"><a href="/Home/Index/index">首页</a></li>
     </ul>
     <ul class="nav nav-sidebar">
-        <li><a href="/Home/Project/index">产品汇总</a></li>
-        <li><a href="/Home/Sale/index">销货汇总</a></li>
-        <li><a class="dropdown-toggle" id="otherMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">销存汇总</a>
-            <ul class="dropdown-menu" aria-labelledby="otherMenu">
-                <li><a href="/Home/Sale/addSale">销售单</a></li>
-                <li><a data-toggle="modal" data-target="#areDeveloping">进货单</a></li>
-            </ul>
-        </li>
-        <li><a href="/Home/Dealer/index">经销商</a></li>
-        <li><a href="/Home/Unit/index">最小单位</a></li>
+        <li id="menu_project"><a href="/Home/Project/index">产品汇总</a></li>
+        <li id="menu_sale"><a href="/Home/Sale/index">销货汇总</a></li>
+        <li id="menu_buy"><a href="/Home/Buy/index">进货汇总</a></li>
+        <!--<li><a href="/Home/Sale/addSale">销售单</a></li>-->
+        <!--<li><a href="/Home/Buy/addBuy">进货单</a></li>-->
+        <li id="menu_dealer"><a href="/Home/Dealer/index">经销商</a></li>
+        <li id="menu_unit"><a href="/Home/Unit/index">最小单位</a></li>
         <!--<li><a data-toggle="tooltip" data-placement="bottom" title="网站暂无留言功能">留言</a></li>-->
     </ul>
 </aside>
