--- a/Application/Home/View/Dealer/add.html
+++ b/Application/Home/View/Dealer/add.html
@@ -26,6 +26,12 @@
                            class="form-control"
                            required autocomplete="off">
                 </div>
+                <div class="form-group">
+                    <label for="address">公司地址</label>
+                    <input type="text" id="address" name="address" value="{$dealerInfo['address']}"
+                           class="form-control"
+                           required autocomplete="off">
+                </div>
                 <div>
                     <label for="type">类型</label>
                     <select id="type" name="type" class="form-control">
