--- a/Application/Home/View/Unit/index.html
+++ b/Application/Home/View/Unit/index.html
@@ -11,26 +11,29 @@
                     <h1 class="page-header">添加</h1>
                     <form action="/Home/Unit/edit" method="post" autocomplete="off">
                         <div class="form-group">
-                            <label for="category-name">单位名称</label>
-                            <input type="text" id="category-name" name="name" class="form-control"
+                            <label for="unitName">单位名称</label>
+                            <input type="text" id="unitName" name="name" class="form-control"
                                    placeholder="在此处输入栏目名称" required autocomplete="off">
+                            <input type="hidden" name="unitId" value="" id="unitId"/>
                         </div>
-                        <button class="btn btn-primary" type="submit" name="submit">添加</button>
+                        <button class="btn btn-primary" type="submit" name="submit">提交</button>
                     </form>
                 </div>
                 <div class="col-md-7">
-                    <h1 class="page-header">管理 <span class="badge">3</span></h1>
+                    <h1 class="page-header">管理 <span class="badge">{$count}</span></h1>
                     <div class="table-responsive">
                         <table class="table table-striped table-hover">
                             <thead>
                             <tr>
-                                <th style="text-align: center;"><span class="glyphicon"></span><span class="visible-lg">ID</span></th>
-                                <th style="text-align: center;"><span class="glyphicon"></span><span class="visible-lg">名称</span></th>
-                                <th style="text-align: center;"><span class="glyphicon"></span><span class="visible-lg">操作</span></th>
+                                <th style="text-align: center;"><span class="glyphicon"></span><span class="visible-lg">ID</span>
+                                </th>
+                                <th style="text-align: center;"><span class="glyphicon"></span><span class="visible-lg">名称</span>
+                                </th>
+                                <th style="text-align: center;"><span class="glyphicon"></span><span class="visible-lg">操作</span>
+                                </th>
                             </tr>
                             </thead>
                             <tbody>
-
 
                             <foreach name="unitInfo" item="units">
                                 <tr>
@@ -38,7 +41,8 @@
                                     <td align="center">{$units['name']}</td>
                                     <td align="center">
                                         <!--<a href="/Home/Unit/edit/unitId/{$units['id']}">修改</a>-->
-                                        <a href="/Home/Unit/del/unitId/{$units['id']}" rel="1">删除</a>
+                                        <!--<a href="/Home/Unit/del/unitId/{$units['id']}" rel="1">删除</a>-->
+                                        <a onclick="edit('{$units['id']}','{$units['name']}')" rel="1">修改</a>
                                     </td>
                                 </tr>
                             </foreach>
@@ -49,33 +53,16 @@
                 </div>
             </div>
         </div>
+    </div>
 </section>
-
-<script src="js/bootstrap.min.js"></script>
-<script src="js/admin-scripts.js"></script>
+<input type="hidden" id="page_type" value="unit">
+<include file="Public:footer"/>
 <script>
-    //是否确认删除
-    $(function () {
-        $("#main table tbody tr td a").click(function () {
-            var name = $(this);
-            var id = name.attr("rel"); //对应id
-            if (event.srcElement.outerText === "删除") {
-                if (window.confirm("此操作不可逆，是否确认？")) {
-                    $.ajax({
-                        type: "POST",
-                        url: "/Category/delete",
-                        data: "id=" + id,
-                        cache: false, //不缓存此页面
-                        success: function (data) {
-                            window.location.reload();
-                        }
-                    });
-                }
-                ;
-            }
-            ;
-        });
-    });
+    function edit(id, name) {
+        $('#unitName').val(name);
+        $('#unitId').val(id);
+
+    }
 </script>
 </body>
 </html>
